# todo-list

./: .env.example  pyproject.toml
config/: settings.py  urls.py
todolist/: forms.py  models.py  urls.py  views.py
todolist/migrations/: 0001_initial.py  0002_task_created_at_task_updated_at.py
todolist/templates/: todolist.html
